    -added/improved several rules

-Spanish:
    -removed dependency on Hunspell, now uses Morfologik for spell checking
    -Reformatted rules file
    -Added more rules

-Tagalog:
    -removed dependency on Hunspell, now uses Morfologik for spell checking
    -the dash character ("-") is a delimiter now when tokenizing the text

-Russian:
    -added/improved several rules

-Ukrainian:
    -many new rules (including aggrement with nouns, time expressions etc)
    -rule coverage improvement
    -dictionary update (big improvements for proper nouns and vocative case)
    -new tag and rule to warn about alternative spelling
    -some new disambiguator rules

-Rule Syntax:
    -<short>...</short> can now be added to a rulegroup to affect all the rules
     of that group

-API:
    -removed classes and methods that had been deprecated since 2.7 or longer

-Embedded server:
    -the config file options 'requestLimit' and 'requestLimitPeriodInSeconds' can
     now also be used for the HTTP server (not just for the HTTPS server)
    -new config file option 'trustXForwardForHeader': set this to 'true' if you
     run the server behind a reverse proxy and want the request limit to
     work on the original IP addresses provided by the 'X-forwarded-for' HTTP header,
     usually set by the proxy. If you run behind a proxy but don't set this
     property to true, one user can use all the requests so other users will
     also get an error message because of the request limit.
    -fix response of After the Deadline mode: <description>...</description> was
     sometimes empty, confusing the text check in WordPress
    -bitext rules were not disabled properly, even if they were specified with a
     proper parameter for the server; now it's fixed
    -fixed problem with improper positions for some bitext rules (issue #218)

-GUI:
    -A new 'errorColors' setting has been added to the languagetool.cfg configuration