@@ -68,6 +68,7 @@
 			</xs:attribute>
 			<xs:attribute name="name" type="xs:string" use="required" />
 			<xs:attribute ref="type" use="optional" />
+			<xs:attribute name="external" type="binaryYesNo" use="optional" />
 		</xs:complexType>
 	</xs:element>
 
