@@ -40,7 +40,7 @@ LanguageTool Change Log
     -added/improved several rules
 
 -Ukrainian:
-    -many new rules (including aggrement with nouns, time expressions etc)
+    -many new rules (including agreement with nouns, time expressions etc)
     -rule coverage improvement
     -dictionary update (big improvements for proper nouns and vocative case)
     -new tag and rule to warn about alternative spelling
@@ -49,6 +49,10 @@ LanguageTool Change Log
 -Rule Syntax:
     -<short>...</short> can now be added to a rulegroup to affect all the rules
      of that group
+    -If you develop your own rules that are not part of LT you can now add external="yes"
+     to your categories to prevent the rule link to community.languagetool.org from
+     appearing in our stand-alone GUI (the link would not work for rules that are not part
+     of the main distribution of LT).
 
 -API:
     -removed classes and methods that had been deprecated since 2.7 or longer
